<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.tesla</groupId>
	<artifactId>tesla</artifactId>
	<version>1.0.0</version>
	<packaging>pom</packaging>
	<modules>
		<module>tesla-ops</module>
		<module>tesla-filter</module>
		<module>tesla-gateway</module>
		<module>tesla-common</module>
	</modules>
	<properties>
		<summerframework.version>2.0.0.RELEASE</summerframework.version>
		<saluki.version>1.5.8.RELEASE</saluki.version>
		<dubbo.version>2.6.0</dubbo.version>
		<netty.version>4.1.16.Final</netty.version>
		<drools.version>6.4.0.Final</drools.version>
		<eureka.version>1.6.2</eureka.version>
		<orika.version>1.5.0</orika.version>
		<freemarker.version>2.3.28</freemarker.version>
		<groovy.version>2.4.15</groovy.version>
		<oauth2jwt.version>1.1.3.RELEASE</oauth2jwt.version>
		<servlet.version>3.0.1</servlet.version>
		<hazelcast.version>3.9.1</hazelcast.version>
		<bucket4j.version>4.3.0</bucket4j.version>
		<tesla.common.version>1.0.0</tesla.common.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.hazelcast</groupId>
				<artifactId>hazelcast</artifactId>
				<version>${hazelcast.version}</version>
			</dependency>
			<dependency>
				<groupId>io.projectreactor</groupId>
				<artifactId>reactor-core</artifactId>
				<version>3.1.0.RELEASE</version>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>${servlet.version}</version>
			</dependency>
			<dependency>
				<groupId>org.reflections</groupId>
				<artifactId>reflections</artifactId>
				<version>0.9.11</version>
			</dependency>
			<dependency>
				<groupId>org.owasp.antisamy</groupId>
				<artifactId>antisamy</artifactId>
				<version>1.5.7</version>
			</dependency>
			<dependency>
				<groupId>javax.annotation</groupId>
				<artifactId>javax.annotation-api</artifactId>
				<version>1.3.2</version>
			</dependency>
			<dependency>
				<groupId>com.google.protobuf</groupId>
				<artifactId>protobuf-java</artifactId>
				<version>3.4.0</version>
			</dependency>
			<dependency>
				<groupId>io.github.tesla</groupId>
				<artifactId>tesla-common</artifactId>
				<version>${tesla.common.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.frostingwolf</groupId>
				<artifactId>spring-boot-starter-saluki</artifactId>
				<version>${saluki.version}</version>
				<exclusions>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.jboss.logging</groupId>
						<artifactId>jboss-logging</artifactId>
					</exclusion>
					<exclusion>
						<groupId>com.netflix.archaius</groupId>
						<artifactId>archaius-core</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>dubbo</artifactId>
				<version>${dubbo.version}</version>
				<exclusions>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-web</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>io.netty</groupId>
				<artifactId>netty-all</artifactId>
				<version>${netty.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.curator</groupId>
				<artifactId>curator-framework</artifactId>
				<version>2.5.0</version>
				<exclusions>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-log4j12</artifactId>
					</exclusion>
					<exclusion>
						<groupId>log4j</groupId>
						<artifactId>log4j</artifactId>
					</exclusion>
					<exclusion>
						<groupId>com.google.guava</groupId>
						<artifactId>guava</artifactId>
					</exclusion>
					<exclusion>
						<groupId>io.netty</groupId>
						<artifactId>netty</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.littleshoot</groupId>
				<artifactId>dnssec4j</artifactId>
				<version>0.1.6</version>
				<exclusions>
					<exclusion>
						<groupId>org.littleshoot</groupId>
						<artifactId>dnsjava</artifactId>
					</exclusion>
					<exclusion>
						<groupId>log4j</groupId>
						<artifactId>log4j</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-log4j12</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>dnsjava</groupId>
				<artifactId>dnsjava</artifactId>
				<version>2.1.8</version>
			</dependency>
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>1.2.45</version>
			</dependency>
			<dependency>
				<groupId>com.github.os72</groupId>
				<artifactId>protoc-jar</artifactId>
				<version>3.1.0.1</version>
			</dependency>
			<dependency>
				<groupId>com.googlecode.protobuf-java-format</groupId>
				<artifactId>protobuf-java-format</artifactId>
				<version>1.4</version>
			</dependency>
			<dependency>
				<groupId>com.bkjk.platform.summerframework</groupId>
				<artifactId>summerframework-dependencies</artifactId>
				<version>${summerframework.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.drools</groupId>
				<artifactId>knowledge-api</artifactId>
				<version>${drools.version}</version>
			</dependency>
			<dependency>
				<groupId>com.squareup.okhttp</groupId>
				<artifactId>okhttp</artifactId>
				<version>2.5.0</version>
			</dependency>
			<dependency>
				<groupId>com.netflix.eureka</groupId>
				<artifactId>eureka-client</artifactId>
				<version>${eureka.version}</version>
				<exclusions>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
					<exclusion>
						<groupId>javax.servlet</groupId>
						<artifactId>servlet-api</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>io.github.tesla</groupId>
				<artifactId>tesla-auth-sdk-oauth2</artifactId>
				<version>${oauth2jwt.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.vladimir-bukhtoyarov</groupId>
				<artifactId>bucket4j-hazelcast</artifactId>
				<version>${bucket4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.java-json-tools</groupId>
				<artifactId>json-schema-validator</artifactId>
				<version>2.2.10</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.0.2</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target/classes</outputDirectory>
							<includeEmptyDirs>true</includeEmptyDirs>
							<resources>
								<resource>
									<directory>src/main/resource</directory>
									<filtering>true</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>10</source>
					<target>10</target>
					<encoding>UTF-8</encoding>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.16.22</version>
						</path>
					</annotationProcessorPaths>
					<compilerArgs>
						<arg>--add-modules</arg>
						<arg>java.xml.ws.annotation</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.2</version>
				<configuration>
					<skip>false</skip>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>